<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/car_loan_calculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/roboto"
        android:text="@string/car_loan_calculator"
        android:textSize="@dimen/title_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.179"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/car_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto"
        android:text="@string/car_price"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toStartOf="@+id/car_price_edit"
        app:layout_constraintHorizontal_bias="0.167"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/car_loan_calculator" />

    <TextView
        android:id="@+id/loan_period"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loan_period"
        android:textSize="@dimen/text_size"
        app:layout_constraintBaseline_toBaselineOf="@+id/loan_period_edit"
        app:layout_constraintEnd_toStartOf="@+id/loan_period_edit"
        app:layout_constraintHorizontal_bias="0.268"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/interest_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/interest_rate"
        android:textSize="@dimen/text_size"
        app:layout_constraintBaseline_toBaselineOf="@+id/interest_rate_edit"
        app:layout_constraintEnd_toStartOf="@+id/interest_rate_edit"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/down_payment_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/down_payment_amount"
        android:textSize="@dimen/text_size"
        app:layout_constraintBaseline_toBaselineOf="@+id/down_payment_amount_edit"
        app:layout_constraintEnd_toStartOf="@+id/down_payment_amount_edit"
        app:layout_constraintHorizontal_bias="0.717"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="294dp"
        android:layout_height="39dp"
        android:layout_marginEnd="56dp"
        android:fontFamily="@font/roboto"
        android:text="@string/calculate"
        android:textColor="@android:color/white"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/interest_rate"
        app:layout_constraintVertical_bias="0.043" />

    <EditText
        android:id="@+id/car_price_edit"
        android:layout_width="159dp"
        android:layout_height="38dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/down_payment_amount_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/car_loan_calculator" />

    <EditText
        android:id="@+id/interest_rate_edit"
        android:layout_width="159dp"
        android:layout_height="38dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/calculate_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loan_period"
        app:layout_constraintVertical_bias="0.285" />

    <EditText
        android:id="@+id/down_payment_amount_edit"
        android:layout_width="159dp"
        android:layout_height="38dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/car_price" />

    <EditText
        android:id="@+id/loan_period_edit"
        android:layout_width="159dp"
        android:layout_height="38dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/down_payment_amount_edit" />

    <TextView
        android:id="@+id/car_loan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Car Loan :"
        app:layout_constraintEnd_toStartOf="@+id/txt_car_loan"
        app:layout_constraintHorizontal_bias="0.327"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <TextView
        android:id="@+id/txt_car_loan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="108dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/car_loan"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txt_interest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="108dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/interest"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/interest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Interest :"
        app:layout_constraintBottom_toTopOf="@+id/monthly_repayment"
        app:layout_constraintEnd_toStartOf="@+id/txt_interest"
        app:layout_constraintHorizontal_bias="0.322"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/car_loan"
        app:layout_constraintVertical_bias="0.487" />

    <TextView
        android:id="@+id/txt_monthly_repayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="108dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/interest"
        app:layout_constraintVertical_bias="0.07" />

    <TextView
        android:id="@+id/monthly_repayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Monthly repayment : "
        app:layout_constraintBaseline_toBaselineOf="@+id/txt_monthly_repayment"
        app:layout_constraintEnd_toStartOf="@+id/txt_monthly_repayment"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="Result"
        android:textSize="@dimen/title_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculate_button" />


</androidx.constraintlayout.widget.ConstraintLayout>